# SML-Lib

./: .clang-format  .gitignore  CMakeLists.txt  LICENCE  LICENSE  LISCENCE  README.md  contributing.md  demo.c  style_guide.md
modules/: allocators.c  allocators.h  argument_parsing.c  argument_parsing.h  common_bindings.h  errors_and_logging.c  errors_and_logging.h  file_utils.c  file_utils.h  for_each.h  internal_lib_utils.h  linalg.c  linalg.h  literal_array.c  literal_array.h  math.c  math.h  sml_cstr.c  sml_cstr.h  sml_str.c  sml_str.h  terminal_colors.h
tests/: test_allocators.c  test_allocators_malloc_fail.c  test_linalg.c  test_linalg_malloc_fail.c  test_str.c
